# foto

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  foto.h.in
libexif/: exif-data.c
libexif/canon/: exif-mnote-data-canon.c
libexif/fuji/: exif-mnote-data-fuji.c
libexif/olympus/: exif-mnote-data-olympus.c
libexif/pentax/: exif-mnote-data-pentax.c
src/: main.c  parse.c
